Alt nomes para pt-br  continuação config swagger
